--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-parent">
 <mat-toolbar color="primary">
-  <span> Angular Material App With Tab and Routing </span>
+  <span> Survey Application </span>
   <span class="example-fill-remaining-space"></span>  
   </mat-toolbar> 
   <div class="container">
