--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,11 @@
-<div class="container-parent">
-<mat-toolbar color="primary">
-  <span> Survey Application </span>
-  <span class="example-fill-remaining-space"></span>  
-  </mat-toolbar> 
-  <div class="container">
-  <nav mat-tab-nav-bar>
-    <a mat-tab-link
-    *ngFor="let link of navLinks"
-    [routerLink]="link.link"
-    routerLinkActive #rla="routerLinkActive"
-    [active]="rla.isActive">{{link.label}}</a>
-  </nav>
-</div>
-  <div class="container">
+    <mat-toolbar color="primary">
+      <span> Survey Application </span>
+      <span class="example-fill-remaining-space"></span>
+    </mat-toolbar>
+
+      <nav mat-tab-nav-bar>
+        <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.link" routerLinkActive #rla="routerLinkActive"
+          [active]="rla.isActive">{{link.label}}</a>
+      </nav>
+
     <router-outlet></router-outlet>
-  </div>
-</div>
