--- a/src/app/dynamic-form-question/dynamic-form-question.component.html
+++ b/src/app/dynamic-form-question/dynamic-form-question.component.html
@@ -9,6 +9,28 @@
       <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
         <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
       </select>
+
+      <div [id]="question.key" *ngSwitchCase="'radio'" [formControlName]="question.key">
+        <label *ngFor="let opt of question.options">
+          {{opt.key}}
+          <input
+            type="radio"
+            [name]="question.key"
+            [formControlName]="question.key"
+            [value]="opt.value">
+          </label>
+      </div>
+
+      <div [id]="question.key" *ngSwitchCase="'checkbox'" [formControlName]="question.key">
+        <label *ngFor="let opt of question.options">
+          {{opt.key}}        
+          <input
+            type="checkbox"
+            [name]="question.key"
+            [formControlName]="question.key"
+            [value]="opt.value">
+          </label>
+      </div>
   
     </div>
   
